# docgenerator

./: .env  pyproject.toml  readme.md
ai_docsgen/: client.py  config.py  log_setup.py  main.py  schemas.py
ai_docsgen/ai/: api.py  worker.py
ai_docsgen/ai/prompts/: overview.txt  struct.txt
ai_docsgen/generator/: generator.py
ai_docsgen/git/: scm.py
app/: client.py  main.py  schemas.py  scm.py
