[project]
name = "ai_docsgen"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei-Raev",email = "andrey-raev.raev@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "aiohttp (>=3.12.11,<4.0.0)",
    "pygithub (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
